--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Ultra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+/* global settings */
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 html {
   min-width: 22rem;
@@ -43,7 +56,7 @@ body {
 #project_nav {
   width: 30%;
   min-height: 100vh;
-  background-color: #64da3c;
+  background-color: #f1faee;
   padding: 3rem 1rem;
 }
 
@@ -56,7 +69,7 @@ body {
 .logo_project {
   font-size: 2rem;
   font-family: 'Abril Fatface', cursive;
-  color: #e63946;
+  color: #0a027a;
   margin-bottom: 2rem;
 }
 
@@ -65,7 +78,7 @@ body {
   padding: 1rem 0.5rem;
   border: none;
   background-color: transparent;
-  border-bottom: 0.5px solid #085585;
+  border-bottom: 0.5px solid #457b9d;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -77,7 +90,7 @@ body {
 }
 
 #add_project:hover {
-  background-color: #0274b63a;
+  background-color: #c9e9eb3a;
   color: #e63946;
 }
 
@@ -89,7 +102,7 @@ body {
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 0.5rem 0;
-  border-bottom: 0.5px solid #0e666ba8;
+  border-bottom: 0.5px solid #b8e9eca8;
 }
 
 .span_project {
@@ -110,7 +123,7 @@ body {
 }
 
 .tablinks:hover {
-  background-color: #1a7391e0;
+  background-color: #f3f6f7e0;
   color: #0077b6;
 }
 
@@ -119,7 +132,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 0.5px solid #285672;
+  border-bottom: 0.5px solid #457b9d;
   padding-bottom: 1rem;
   margin-bottom: 0.5rem;
 }
@@ -145,6 +158,12 @@ body {
   align-items: center;
   color: #14213d;
   overflow: hidden;
+}
+
+.header_add_task:hover {
+  background-color: #0076b610;
+  color: #0077b6;
+  border-radius: 2px;
 }
 
 .header_add_task img,
@@ -192,7 +211,7 @@ body {
 }
 
 .priority_box_low {
-  background-color: #a8dadc;
+  background-color: #89ce19;
 }
 
 .priority_box_medium {
@@ -216,7 +235,7 @@ body {
 }
 
 .display_task_description {
-  color: rgb(226, 76, 76);
+  color: rgb(112, 109, 109);
   font-size: 0.8rem;
 }
 
@@ -293,10 +312,59 @@ label {
   cursor: pointer;
 }
 
+.submit_btn:hover {
+  background-color: #1d3557;
+  color: white;
+}
+
 .cancel_btn {
   color: #e63946;
   background-color: #e6394759;
   border-radius: 2px;
   padding: 0.2rem;
   cursor: pointer;
+}
+
+.cancel_btn:hover {
+  background-color: #e63946;
+  color: white;
+}
+
+.edit_task_form_wrapper {
+  padding: 0.7rem;
+  border: 0.5px solid #9ce649;
+}
+
+.edit_task_input_container {
+  margin-bottom: 0.5rem;
+}
+
+.edit_task_select_span {
+  margin-top: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.edit_task_form_buttons,
+.add_task_form_buttons {
+  margin-top: 0.5rem;
+  display: flex;
+  width: 100%;
+}
+
+.edit_task_form_buttons button,
+.add_task_form_buttons button {
+  flex-grow: 1;
+}
+
+.add_task_form_wrapper {
+  padding: 0.7rem;
+  border: 0.5px solid #93ee69;
+}
+
+.add_task_form_wrapper span {
+  margin-right: 0.5rem;
+}
+
+.add_task_input_container {
+  margin-bottom: 0.5rem;
 }
